--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,22 @@
+---
+---
 <!DOCTYPE html>
-<html lang="en">
+<html>
+{% include head.html %}
+<body>
+<div class="container bg">
+<div class="row head-row">
+     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #f1dc48, #cc274d);">
+        <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
+     </header>
+ </div>
+{% include nav-home.html %}
+ 
+  {{ content }}
+  
+{% include footer.html %}
+</div>
 
-  {% include head.html %}
 
-  <body>
-
-    <div class="container content">
-      <header class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
-        </h3>
-      </header>
-
-      <main>
-        {{ content }}
-      </main>
-
-      <footer class="footer">
-        <small>
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
-        </small>
-      </footer>
-    </div>
-
-    {% if site.analytics_id %}
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', '{{ site.analytics_id }}', 'auto');
-       ga('send', 'pageview');
-     </script>
-    {% endif %}
-  </body>
+</body>
 </html>
