更改字体标题

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,30 +6,34 @@
         <table class="table table-sm">
           <tr>
             <td>Main Director:</td>
-            <td><a href="http://baidu.com">kanglc</a></td>
+            <td><a href="">Kanglc</a></td>
           </tr>
           <tr>
             <td>Dev Engine:</td>
             <td>Ruby x Jekyll</td>
           </tr>
-            <tr>
-              <td>Vi Director:</td>
-              <td>Bootstrap</td>
-            </tr>
-            <tr>
-              <td>Co-Vi Director</td>
-              <td>Stylish Portfolio</td>
-            </tr>
-          </table>
-          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
+		  <tr>
+            <td>CSDN博客</td>
+            <td><a href="http://blog.csdn.net/me_tome/article/details/51602256">csdn blog</a></td>
+          </tr>
+            <td>水木社区</td>
+            <td><a href="http://www.newsmth.net">newsmth</a></td>
+          </tr>
+            </table>
+         <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
+ 		  
         </div>
 
         <div class="col-md-6">
           <strong>Friend Links</strong>
           <table class="table table-sm">
-            <tr>
-              <td><a href="http://baidu.com"> kanglc</a></td>
-            </tr>
+		  <tr>
+            <td>Bitbucket</td>
+            <td><a href="https://bitbucket.org/">Bitbucket</a></td>
+          </tr>
+            <td>Gank</td>
+            <td><a href="http://gank.io/post/5823bcf6421aa90e799ec2ad">Gank</a></td>
+          </tr>
           </table>
         </div>
 
