--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,5 @@
 <div class="jumbotron" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat center center scroll;">
-    <p class="display-4 pt-5 text-center text-info">Kanglc -Blog</p>
+    <p class="display-5 pt-5 text-center text-info">欢迎来到:Kanglc-Blog</p>
 	<p class="text-white text-center" >联系邮箱：klcmcu@163.com</p>
 	<p class="text-white text-center" >QQ：365046128</p>
-    <p class="text-white text-center" >水木社区<a href="http://www.newsmth.net/">Szhshp</a></p>
-    <p class="text-white text-center" >百度搜索: <a href="https://www.baidu.com">Project Gaia</a></p>
 </div>
